Add IDs to read and write

--- a/classif.ipynb
+++ b/classif.ipynb
@@ -267,7 +267,7 @@
    "outputs": [],
    "source": [
     "def process_enron():\n",
-    "    dfEnronFull = pd.read_csv('./kaggle-datasets/The-Enron-Email-Dataset/emails.csv')\n",
+    "    dfEnronFull = pd.read_csv('./kaggle-datasets/The-Enron-Email-Dataset/emails.csv', usecols=['message'])\n",
     "\n",
     "    #TODO: for now we are overwriting the message column for memory-saving purposes,\n",
     "    # but in future we may wnat to extract other features from the message column such as email metadata\n",
@@ -275,41 +275,42 @@
     "    #TODO: even overwriting, this still seems to use the same amount of ram\n",
     "    #TODO: when reading from csv in load_processed_enron it gets an index, but not when do initial read - here need to ensure has index\n",
     "    dfEnronFull['message'] = dfEnronFull['message'].str.split(\"\\n\\n\", n=1).str[1]\n",
+    "    dfEnronFull[\"id\"] = dfEnronFull.index + 1\n",
     "\n",
-    "    dfEnronFull.to_csv('./Processed-Datasets/Enron-Bodies/emails.csv')\n",
+    "    dfEnronFull.to_csv('./Processed-Datasets/Enron-Bodies/emails.csv', columns=['message'])\n",
     "\n",
     "    return dfEnronFull"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Unnamed: 0', 'file', 'message']"
+       "['file', 'message']"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "list(pd.read_csv('./Processed-Datasets/Enron-Bodies/emails.csv', nrows=1))"
+    "list(pd.read_csv('./kaggle-datasets/The-Enron-Email-Dataset/emails.csv', nrows=1))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "def load_processed_enron():\n",
-    "    col_names=['id', 'file' 'message']\n",
-    "    dfEnronFull = pd.read_csv('./Processed-Datasets/Enron-Bodies/emails.csv', index_col=0, usecols=['Unnamed: 0', 'message'])\n",
+    "    dfEnronFull = pd.read_csv('./Processed-Datasets/Enron-Bodies/emails.csv', usecols=['message'])\n",
+    "    dfEnronFull[\"id\"] = dfEnronFull.index + 1\n",
     "\n",
     "    return dfEnronFull"
    ]
@@ -326,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -361,76 +362,88 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>message</th>\n",
+       "      <th>id</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Here is our forecast\\n\\n</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Traveling to have a business meeting takes the...</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>test successful.  way to go!!!</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Randy,\\n\\n Can you send me a schedule of the s...</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Let's shoot for Tuesday at 11:45.</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>517396</th>\n",
        "      <td>This is a trade with OIL-SPEC-HEDGE-NG (John L...</td>\n",
+       "      <td>517397</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>517397</th>\n",
        "      <td>Some of my position is with the Alberta Term b...</td>\n",
+       "      <td>517398</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>517398</th>\n",
        "      <td>2\\n\\n -----Original Message-----\\nFrom: \\tDouc...</td>\n",
+       "      <td>517399</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>517399</th>\n",
        "      <td>Analyst\\t\\t\\t\\t\\tRank\\n\\nStephane Brodeur\\t\\t\\...</td>\n",
+       "      <td>517400</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>517400</th>\n",
        "      <td>i think the YMCA has a class that is for peopl...</td>\n",
+       "      <td>517401</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>517401 rows × 1 columns</p>\n",
+       "<p>517401 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                  message\n",
-       "0                               Here is our forecast\\n\\n \n",
-       "1       Traveling to have a business meeting takes the...\n",
-       "2                          test successful.  way to go!!!\n",
-       "3       Randy,\\n\\n Can you send me a schedule of the s...\n",
-       "4                     Let's shoot for Tuesday at 11:45.  \n",
-       "...                                                   ...\n",
-       "517396  This is a trade with OIL-SPEC-HEDGE-NG (John L...\n",
-       "517397  Some of my position is with the Alberta Term b...\n",
-       "517398  2\\n\\n -----Original Message-----\\nFrom: \\tDouc...\n",
-       "517399  Analyst\\t\\t\\t\\t\\tRank\\n\\nStephane Brodeur\\t\\t\\...\n",
-       "517400  i think the YMCA has a class that is for peopl...\n",
+       "                                                  message      id\n",
+       "0                               Here is our forecast\\n\\n        1\n",
+       "1       Traveling to have a business meeting takes the...       2\n",
+       "2                          test successful.  way to go!!!       3\n",
+       "3       Randy,\\n\\n Can you send me a schedule of the s...       4\n",
+       "4                     Let's shoot for Tuesday at 11:45.         5\n",
+       "...                                                   ...     ...\n",
+       "517396  This is a trade with OIL-SPEC-HEDGE-NG (John L...  517397\n",
+       "517397  Some of my position is with the Alberta Term b...  517398\n",
+       "517398  2\\n\\n -----Original Message-----\\nFrom: \\tDouc...  517399\n",
+       "517399  Analyst\\t\\t\\t\\t\\tRank\\n\\nStephane Brodeur\\t\\t\\...  517400\n",
+       "517400  i think the YMCA has a class that is for peopl...  517401\n",
        "\n",
-       "[517401 rows x 1 columns]"
+       "[517401 rows x 2 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
