Loaded Enron with stoplist

--- a/classif.ipynb
+++ b/classif.ipynb
@@ -1433,16 +1433,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dEnron = EmailDataset(dfEnronFull, preprocessing=[\"lower\",\"newlines\",\"stemming\",\"returns\"], feature_selection=[\"nltk_tokenize\", \"nltk_stoplist\", \"remove_short_tokens\"], retList=False, bodyColumn='message')"
+    "dEnron = EmailDataset(dfEnronFull, preprocessing=[\"lower\",\"newlines\",\"stemming\",\"returns\"], feature_selection=[\"nltk_tokenize\", \"nltk_stoplist\", \"remove_short_tokens\", \"custom_stoplist\"], retList=False, bodyColumn='message')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -1560,7 +1560,7 @@
        "[517401 rows x 3 columns]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
