--- a/classif.ipynb
+++ b/classif.ipynb
@@ -1571,35 +1571,352 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 62,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "Can only compare identically-labeled Series objects",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[39], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m dEnron\u001b[39m.\u001b[39mpp_df[dEnron\u001b[39m.\u001b[39;49mpp_df[\u001b[39m'\u001b[39;49m\u001b[39mppBody\u001b[39;49m\u001b[39m'\u001b[39;49m] \u001b[39m==\u001b[39;49m dEnronSpam\u001b[39m.\u001b[39;49mpp_df[\u001b[39m'\u001b[39;49m\u001b[39mppBody\u001b[39;49m\u001b[39m'\u001b[39;49m]]\n",
-      "File \u001b[0;32m~/.local/lib/python3.8/site-packages/pandas/core/ops/common.py:81\u001b[0m, in \u001b[0;36m_unpack_zerodim_and_defer.<locals>.new_method\u001b[0;34m(self, other)\u001b[0m\n\u001b[1;32m     77\u001b[0m             \u001b[39mreturn\u001b[39;00m \u001b[39mNotImplemented\u001b[39m\n\u001b[1;32m     79\u001b[0m other \u001b[39m=\u001b[39m item_from_zerodim(other)\n\u001b[0;32m---> 81\u001b[0m \u001b[39mreturn\u001b[39;00m method(\u001b[39mself\u001b[39;49m, other)\n",
-      "File \u001b[0;32m~/.local/lib/python3.8/site-packages/pandas/core/arraylike.py:40\u001b[0m, in \u001b[0;36mOpsMixin.__eq__\u001b[0;34m(self, other)\u001b[0m\n\u001b[1;32m     38\u001b[0m \u001b[39m@unpack_zerodim_and_defer\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39m__eq__\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m     39\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m__eq__\u001b[39m(\u001b[39mself\u001b[39m, other):\n\u001b[0;32m---> 40\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_cmp_method(other, operator\u001b[39m.\u001b[39;49meq)\n",
-      "File \u001b[0;32m~/.local/lib/python3.8/site-packages/pandas/core/series.py:6090\u001b[0m, in \u001b[0;36mSeries._cmp_method\u001b[0;34m(self, other, op)\u001b[0m\n\u001b[1;32m   6087\u001b[0m res_name \u001b[39m=\u001b[39m ops\u001b[39m.\u001b[39mget_op_result_name(\u001b[39mself\u001b[39m, other)\n\u001b[1;32m   6089\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39misinstance\u001b[39m(other, Series) \u001b[39mand\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_indexed_same(other):\n\u001b[0;32m-> 6090\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mCan only compare identically-labeled Series objects\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m   6092\u001b[0m lvalues \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_values\n\u001b[1;32m   6093\u001b[0m rvalues \u001b[39m=\u001b[39m extract_array(other, extract_numpy\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m, extract_range\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n",
-      "\u001b[0;31mValueError\u001b[0m: Can only compare identically-labeled Series objects"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "dEnron.pp_df[dEnron.pp_df['ppBody'] == dEnronSpam.pp_df['ppBody']]"
+    "df_EnronAll = dEnronSpam.pp_df.merge(dEnron.pp_df, on=['ppBody'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id_x</th>\n",
+       "      <th>ppBody</th>\n",
+       "      <th>label_x</th>\n",
+       "      <th>id_y</th>\n",
+       "      <th>label_y</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>5222</td>\n",
+       "      <td></td>\n",
+       "      <td>1</td>\n",
+       "      <td>161</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>5222</td>\n",
+       "      <td></td>\n",
+       "      <td>1</td>\n",
+       "      <td>529</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>5222</td>\n",
+       "      <td></td>\n",
+       "      <td>1</td>\n",
+       "      <td>560</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>5222</td>\n",
+       "      <td></td>\n",
+       "      <td>1</td>\n",
+       "      <td>754</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5222</td>\n",
+       "      <td></td>\n",
+       "      <td>1</td>\n",
+       "      <td>1054</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12205</th>\n",
+       "      <td>28792</td>\n",
+       "      <td>cash trading today due veterans day utilities ...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>461315</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12206</th>\n",
+       "      <td>21121</td>\n",
+       "      <td>bill desk desk deal number 687148 checked volu...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>512363</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12207</th>\n",
+       "      <td>26975</td>\n",
+       "      <td>vince mail happy speak power risk conference f...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>205607</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12208</th>\n",
+       "      <td>26975</td>\n",
+       "      <td>vince mail happy speak power risk conference f...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>214346</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12209</th>\n",
+       "      <td>26975</td>\n",
+       "      <td>vince mail happy speak power risk conference f...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>226730</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>12210 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        id_x                                             ppBody label_x  \\\n",
+       "0       5222                                                          1   \n",
+       "1       5222                                                          1   \n",
+       "2       5222                                                          1   \n",
+       "3       5222                                                          1   \n",
+       "4       5222                                                          1   \n",
+       "...      ...                                                ...     ...   \n",
+       "12205  28792  cash trading today due veterans day utilities ...       0   \n",
+       "12206  21121  bill desk desk deal number 687148 checked volu...       0   \n",
+       "12207  26975  vince mail happy speak power risk conference f...       0   \n",
+       "12208  26975  vince mail happy speak power risk conference f...       0   \n",
+       "12209  26975  vince mail happy speak power risk conference f...       0   \n",
+       "\n",
+       "         id_y  label_y  \n",
+       "0         161        0  \n",
+       "1         529        0  \n",
+       "2         560        0  \n",
+       "3         754        0  \n",
+       "4        1054        0  \n",
+       "...       ...      ...  \n",
+       "12205  461315        0  \n",
+       "12206  512363        0  \n",
+       "12207  205607        0  \n",
+       "12208  214346        0  \n",
+       "12209  226730        0  \n",
+       "\n",
+       "[12210 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_EnronAll"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_EnronAll = dEnronSpam.pp_df.merge(dEnron.pp_df.drop_duplicates)"
+    "df_EnronAll = dEnron.pp_df.merge(dEnronSpam.pp_df, on=['ppBody'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id_x</th>\n",
+       "      <th>ppBody</th>\n",
+       "      <th>label_x</th>\n",
+       "      <th>id_y</th>\n",
+       "      <th>label_y</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>161</td>\n",
+       "      <td></td>\n",
+       "      <td>0</td>\n",
+       "      <td>5222</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>161</td>\n",
+       "      <td></td>\n",
+       "      <td>0</td>\n",
+       "      <td>11227</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>161</td>\n",
+       "      <td></td>\n",
+       "      <td>0</td>\n",
+       "      <td>5367</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>161</td>\n",
+       "      <td></td>\n",
+       "      <td>0</td>\n",
+       "      <td>11305</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>161</td>\n",
+       "      <td></td>\n",
+       "      <td>0</td>\n",
+       "      <td>6754</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12205</th>\n",
+       "      <td>509066</td>\n",
+       "      <td>going meet today hood recap meeting yesterday ...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>24355</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12206</th>\n",
+       "      <td>509307</td>\n",
+       "      <td>hey playing soccer tonight looks like pretty m...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>22806</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12207</th>\n",
+       "      <td>509934</td>\n",
+       "      <td>bill wanted confirm meeting pdx tomorrow follo...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>18915</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12208</th>\n",
+       "      <td>509991</td>\n",
+       "      <td>hey happen know name scooter place beaverton a...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>17736</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12209</th>\n",
+       "      <td>512363</td>\n",
+       "      <td>bill desk desk deal number 687148 checked volu...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>21121</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>12210 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         id_x                                             ppBody  label_x  \\\n",
+       "0         161                                                           0   \n",
+       "1         161                                                           0   \n",
+       "2         161                                                           0   \n",
+       "3         161                                                           0   \n",
+       "4         161                                                           0   \n",
+       "...       ...                                                ...      ...   \n",
+       "12205  509066  going meet today hood recap meeting yesterday ...        0   \n",
+       "12206  509307  hey playing soccer tonight looks like pretty m...        0   \n",
+       "12207  509934  bill wanted confirm meeting pdx tomorrow follo...        0   \n",
+       "12208  509991  hey happen know name scooter place beaverton a...        0   \n",
+       "12209  512363  bill desk desk deal number 687148 checked volu...        0   \n",
+       "\n",
+       "        id_y label_y  \n",
+       "0       5222       1  \n",
+       "1      11227       1  \n",
+       "2       5367       1  \n",
+       "3      11305       1  \n",
+       "4       6754       1  \n",
+       "...      ...     ...  \n",
+       "12205  24355       0  \n",
+       "12206  22806       0  \n",
+       "12207  18915       0  \n",
+       "12208  17736       0  \n",
+       "12209  21121       0  \n",
+       "\n",
+       "[12210 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_EnronAll"
    ]
   },
   {
