Sucessfully removed duplicates

--- a/classif.ipynb
+++ b/classif.ipynb
@@ -1920,6 +1920,154 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#remove the items that appear in spam list, as best we can by comparing preprocessed email bodies - might not catch all of them\n",
+    "dEnron.pp_df = dEnron.pp_df[~dEnron.pp_df.ppBody.isin(dEnronSpam.pp_df.ppBody)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>ppBody</th>\n",
+       "      <th>label</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>forecast</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>traveling business meeting takes fun trip espe...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>test successful way</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>randy send schedule salary level everyone sche...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>let shoot tuesday</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>517396</th>\n",
+       "      <td>517397</td>\n",
+       "      <td>trade oil spec hedge john lavorato book john z...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>517397</th>\n",
+       "      <td>517398</td>\n",
+       "      <td>position alberta term book send positions dire...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>517398</th>\n",
+       "      <td>517399</td>\n",
+       "      <td>original message doucet dawn sent wednesday no...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>517399</th>\n",
+       "      <td>517400</td>\n",
+       "      <td>analyst rank stephane brodeur chad clark ian c...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>517400</th>\n",
+       "      <td>517401</td>\n",
+       "      <td>think ymca class people recovering heart attac...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>516413 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            id                                             ppBody  label\n",
+       "0            1                                           forecast      0\n",
+       "1            2  traveling business meeting takes fun trip espe...      0\n",
+       "2            3                                test successful way      0\n",
+       "3            4  randy send schedule salary level everyone sche...      0\n",
+       "4            5                                  let shoot tuesday      0\n",
+       "...        ...                                                ...    ...\n",
+       "517396  517397  trade oil spec hedge john lavorato book john z...      0\n",
+       "517397  517398  position alberta term book send positions dire...      0\n",
+       "517398  517399  original message doucet dawn sent wednesday no...      0\n",
+       "517399  517400  analyst rank stephane brodeur chad clark ian c...      0\n",
+       "517400  517401  think ymca class people recovering heart attac...      0\n",
+       "\n",
+       "[516413 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dEnron.pp_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dEnron.pp_df.to_csv('./Processed-Datasets/Enron-Bodies/enron-ham-only.csv')"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
